--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -17,7 +17,8 @@
 
 body {
     background-color: var(--colorBlue);
-    max-width: 1440px; 
+    max-width: 1440px;
+    margin: auto; 
 }
 
 #container {
