modif CSS et HTML

--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -273,69 +273,125 @@ article.article2 {
     background-color: rgb(255, 255, 255);
     grid-area: article2;
     padding: 10px;
-    font-style: italic;
     font-size: 20px;
     border-radius: 40px;
 }
 
-.bigimg {
-    background-color: bisque;
+div.cardsArticle3container {
+    background-color: rgb(255, 255, 255);
     display: flex;
+    flex-wrap: wrap;
+    margin: auto;
 }
-
-.blocka {
-    background-color: chocolate;
-    display: flex;
-    width: 45%;
-}
-
-.blockc {
-    background-color: rgb(0, 255, 13);
-    width: 240px;
-}
-
-.blockd {
-    background-color: darkmagenta;
-}
-
-.blocke {
-    background-color: rgb(0, 153, 255);
-    width: 240px;
-}
-
-.blockf {
-    background-color: rgb(139, 0, 42);
-    width: 240px;
-}
-
 
 .block1 {
-    background-color: brown;
+    background-color: rgb(255, 255, 255);
     display: flex;
     width: 45%;
+    margin: auto;
+    max-width: 499px;
 }
+
+.card21 {
+    background-color: rgb(255, 255, 255);
+    width: 240px;
+}
+
+.card21:hover {
+    box-shadow: 5px 5px 15px rgb(145, 145, 145);
+    transition: 400ms;
+}
+
+.block1a {
+    background-color: rgb(255, 255, 255);
+}
+
+.card22 {
+    background-color: rgb(255, 255, 255);
+    width: 240px;
+}
+
+.card22:hover {
+    box-shadow: 5px 5px 15px rgb(145, 145, 145);
+    transition: 400ms;
+}
+
+.card23 {
+    background-color: rgb(255, 255, 255);
+    width: 240px;
+}
+
+.card23:hover {
+    box-shadow: 5px 5px 15px rgb(145, 145, 145);
+    transition: 400ms;
+}
+
 
 .block2 {
-    background-color: rgb(251, 255, 0);
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    width: 45%;
+    margin: auto;
+    max-width: 499px;
+}
+
+.card24 {
+    border: 5px solid rgb(255, 255, 255);
+    width: 300px;
+    box-shadow: 5px 5px 0px rgb(145, 145, 145);
+    transition: 400ms;
+    border-radius: 15px;
+    background: rgb(255, 255, 255);
+    color: black;
+}
+
+.card24:hover {
+    box-shadow: 5px 5px 15px rgb(145, 145, 145);
+    transition: 400ms;
+}
+
+.block2a {
+    background-color: rgb(255, 255, 255);
+    margin-left: 100px;   
+}
+
+.card25 {
+    border: 5px solid rgb(255, 255, 255);
+    width: 100%;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-left: 20px;
+    box-shadow: 5px 5px 0px rgb(145, 145, 145);
+    transition: 400ms;
+    border-radius: 15px;
+    background: rgb(255, 255, 255);
+    color: black;
+}
+
+.card25:hover {
+    box-shadow: 5px 5px 15px rgb(145, 145, 145);
+    transition: 400ms;
+}
+
+.card26 {
+    border: 5px solid rgb(255, 255, 255);
     width: 240px;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-left: 20px;
+    box-shadow: 5px 5px 0px rgb(145, 145, 145);
+    transition: 400ms;
+    border-radius: 15px;
+    background: rgb(255, 255, 255);
+    color: black;
 }
 
-.block3 {
-    background-color: rgb(0, 190, 41);
-    
+.card26:hover {
+    box-shadow: 5px 5px 15px rgb(145, 145, 145);
+    transition: 400ms;
 }
-
-.block4 {
-    background-color: rgb(0, 66, 207);
-    width: 240px;
-}
-
-.block5 {
-    background-color: rgb(255, 0, 221);
-    width: 240px;
-}
-
-#cardsArticle3 {
+/*
+.cardsArticle3 {
     display: flex;
     flex-wrap: wrap;
     border-radius: 15px;
@@ -366,7 +422,7 @@ article.article2 {
     border-radius: 15px;
     background: rgb(255, 255, 255);
     color: black;
-}
+}*/
 
 .cardImage3 {
     justify-content: center;
@@ -375,8 +431,8 @@ article.article2 {
 .cardImage3 img {
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    height: 240px;
-    width: 350px;
+    height: 140px;
+    width: 300px;
     object-fit: cover;
 }
 
@@ -387,21 +443,10 @@ article.article2 {
 .cardImage4 img {
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    height: 400px;
+    height: 390px;
     width: 100%;
     object-fit: cover;
 }
-
-.cardArticle3:hover {
-    box-shadow: 5px 5px 15px rgb(145, 145, 145);
-    transition: 400ms;
-}
-
-.cardArticle4:hover {
-    box-shadow: 5px 5px 15px rgb(145, 145, 145);
-    transition: 400ms;
-}
-
 
 footer {
     background-color: rgb(255, 255, 255);
@@ -441,63 +486,26 @@ footer ul li a {
         "footer footer";
         height: 100vh;
     }
+   
+    .cardsArticle3container {
+        background-color: rgb(255, 255, 255);
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+    }
 
-    .bigimg {
-        background-color: bisque;
-        display: flex;
-        flex-wrap: wrap;
-    }
-    
-    .blocka {
-        background-color: chocolate;
-        display: flex;
-        width: 700px;
-    }
-    
-    .blockc {
-        background-color: rgb(0, 255, 13);
-        width: 240px;
-    }
-    
-    .blockd {
-        background-color: darkmagenta;
-    }
-    
-    .blocke {
-        background-color: rgb(0, 153, 255);
-        width: 240px;
-    }
-    
-    .blockf {
-        background-color: rgb(139, 0, 42);
-        width: 240px;
-    }
-    
-    
     .block1 {
-        background-color: brown;
+        background-color: rgb(255, 255, 255);
         display: flex;
-        width: 700px;
+        width: 45%;
+        margin: auto;
     }
-    
+
     .block2 {
-        background-color: rgb(251, 255, 0);
-        width: 240px;
-    }
-    
-    .block3 {
-        background-color: rgb(0, 190, 41);
-        
-    }
-    
-    .block4 {
-        background-color: rgb(0, 66, 207);
-        width: 240px;
-    }
-    
-    .block5 {
-        background-color: rgb(255, 0, 221);
-        width: 240px;
+        background-color: rgb(255, 255, 255);
+        display: flex;
+        width: 45%;
+        margin: auto;
     }
 }
 
@@ -612,13 +620,13 @@ footer ul li a {
         grid-area: activity;
     }
 
-    .bigimg {
+    .cardsArticle3container {
         background-color: bisque;
         display: flex;
         flex-wrap: wrap;
     }
     
-    .blocka {
+    .block2 {
         background-color: chocolate;
         display: flex;
         flex-wrap: wrap;
